crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_with_string_escape.txt
A = [
  (A)
  "escape"
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:2:4
  |
2 |   (A)
  |    ^
  |    |
  |    references itself
  |
help: match at least one syntax-tree node before recursing
-------------------- SYMBOLS ---------------------
A
  A (cycle)
